RHEL/8.3/rpm-qa.md
## Red Hat Enterprise Linux release 8.3 「最小限のインストール」後のrpm -qaリスト

Red Hat Enterprise Linux release 8.3 を「ソフトウェアの選択」画面で「最小限のインストール」を選択しインストールした直後の「# rpm -qa」コマンドの結果です。

| パッケージ名                                                      |
| ----------------------------------------------------------- |
| kernel-core-4.18.0-240.el8.x86_64                           |
| geolite2-city-20180605-1.el8.noarch                         |
| iputils-20180629-2.el8.x86_64                               |
| xkeyboard-config-2.28-1.el8.noarch                          |
| polkit-libs-0.115-11.el8.x86_64                             |
| setup-2.12.2-6.el8.noarch                                   |
| policycoreutils-2.9-9.el8.x86_64                            |
| publicsuffix-list-dafsa-20180723-1.el8.noarch               |
| libsss_certmap-2.3.0-9.el8.x86_64                           |
| ncurses-libs-6.1-7.20180224.el8.x86_64                      |
| unbound-libs-1.7.3-14.el8.x86_64                            |
| bash-4.4.19-12.el8.x86_64                                   |
| selinux-policy-targeted-3.14.3-54.el8.noarch                |
| libxml2-2.9.7-8.el8.x86_64                                  |
| kernel-modules-4.18.0-240.el8.x86_64                        |
| libcom_err-1.45.6-1.el8.x86_64                              |
| python3-linux-procfs-0.6.2-2.el8.noarch                     |
| libxcrypt-4.1.1-4.el8.x86_64                                |
| initscripts-10.00.9-1.el8.x86_64                            |
| libstdc++-8.3.1-5.1.el8.x86_64                              |
| python3-gobject-base-3.28.3-2.el8.x86_64                    |
| gmp-6.1.2-10.el8.x86_64                                     |
| dracut-squash-049-95.git20200804.el8.x86_64                 |
| libmnl-1.0.4-6.el8.x86_64                                   |
| bind-export-libs-9.11.20-5.el8.x86_64                       |
| findutils-4.6.0-20.el8.x86_64                               |
| dhcp-client-4.3.6-41.el8.x86_64                             |
| libnl3-3.5.0-1.el8.x86_64                                   |
| gnupg2-2.2.20-2.el8.x86_64                                  |
| file-libs-5.33-16.el8.x86_64                                |
| python3-libdnf-0.48.0-5.el8.x86_64                          |
| libattr-2.4.48-3.el8.x86_64                                 |
| rpm-build-libs-4.14.3-4.el8.x86_64                          |
| lz4-libs-1.8.3-2.el8.x86_64                                 |
| plymouth-scripts-0.9.4-7.20200615git1e36e30.el8.x86_64      |
| libsemanage-2.9-3.el8.x86_64                                |
| sssd-nfs-idmap-2.3.0-9.el8.x86_64                           |
| libaio-0.3.112-1.el8.x86_64                                 |
| python3-inotify-0.9.6-13.el8.noarch                         |
| libtdb-1.4.3-1.el8.x86_64                                   |
| python3-dnf-plugins-core-4.0.17-5.el8.noarch                |
| file-5.33-16.el8.x86_64                                     |
| python3-slip-dbus-0.6.4-11.el8.noarch                       |
| diffutils-3.6-6.el8.x86_64                                  |
| python3-firewall-0.8.2-2.el8.noarch                         |
| ethtool-5.0-2.el8.x86_64                                    |
| firewalld-0.8.2-2.el8.noarch                                |
| libnfnetlink-1.0.1-13.el8.x86_64                            |
| sssd-kcm-2.3.0-9.el8.x86_64                                 |
| libsss_idmap-2.3.0-9.el8.x86_64                             |
| shim-x64-15-16.el8.x86_64                                   |
| numactl-libs-2.0.12-11.el8.x86_64                           |
| lvm2-2.03.09-5.el8.x86_64                                   |
| iptables-1.8.4-15.el8.x86_64                                |
| openssh-clients-8.0p1-5.el8.x86_64                          |
| gdbm-1.18-1.el8.x86_64                                      |
| rng-tools-6.8-3.el8.x86_64                                  |
| tar-1.30-5.el8.x86_64                                       |
| parted-3.2-38.el8.x86_64                                    |
| ipset-libs-7.1-1.el8.x86_64                                 |
| man-db-2.7.6.1-17.el8.x86_64                                |
| snappy-1.1.8-3.el8.x86_64                                   |
| lshw-B.02.19.2-2.el8.x86_64                                 |
| e2fsprogs-libs-1.45.6-1.el8.x86_64                          |
| lsscsi-0.30-1.el8.x86_64                                    |
| pigz-2.4-4.el8.x86_64                                       |
| iwl6050-firmware-41.28.5.1-99.el8.1.noarch                  |
| brotli-1.0.6-2.el8.x86_64                                   |
| iwl5000-firmware-8.83.5.1_1-99.el8.1.noarch                 |
| hdparm-9.54-2.el8.x86_64                                    |
| iwl135-firmware-18.168.6.1-99.el8.1.noarch                  |
| libpath_utils-0.2.1-39.el8.x86_64                           |
| libpipeline-1.5.0-2.el8.x86_64                              |
| libsss_nss_idmap-2.3.0-9.el8.x86_64                         |
| libyaml-0.1.7-5.el8.x86_64                                  |
| sg3_utils-libs-1.44-5.el8.x86_64                            |
| libfastjson-0.99.8-2.el8.x86_64                             |
| libxkbcommon-0.9.1-1.el8.x86_64                             |
| dnf-data-4.2.23-4.el8.noarch                                |
| fuse-2.9.7-12.el8.x86_64                                    |
| cyrus-sasl-lib-2.1.27-5.el8.x86_64                          |
| grub2-tools-minimal-2.02-90.el8.x86_64                      |
| grubby-8.40-41.el8.x86_64                                   |
| libdb-utils-5.3.28-39.el8.x86_64                            |
| crypto-policies-scripts-20200713-1.git51d1222.el8.noarch    |
| cracklib-2.9.6-15.el8.x86_64                                |
| libtirpc-1.1.4-4.el8.x86_64                                 |
| elfutils-debuginfod-client-0.180-1.el8.x86_64               |
| gettext-libs-0.19.8.1-17.el8.x86_64                         |
| dbus-libs-1.12.8-11.el8.x86_64                              |
| libblkid-2.32.1-24.el8.x86_64                               |
| openssl-libs-1.1.1g-11.el8.x86_64                           |
| kmod-libs-25-16.el8.x86_64                                  |
| libutempter-1.1.6-14.el8.x86_64                             |
| util-linux-2.32.1-24.el8.x86_64                             |
| gettext-0.19.8.1-17.el8.x86_64                              |
| gnutls-3.6.14-6.el8.x86_64                                  |
| trousers-0.3.14-4.el8.x86_64                                |
| python3-decorator-4.2.1-2.el8.noarch                        |
| iproute-5.3.0-5.el8.x86_64                                  |
| libgcc-8.3.1-5.1.el8.x86_64                                 |
| python3-iniparse-0.4-31.el8.noarch                          |
| geolite2-country-20180605-1.el8.noarch                      |
| crontabs-1.11-16.20150630git.el8.noarch                     |
| tzdata-2020a-1.el8.noarch                                   |
| cronie-anacron-1.5.2-4.el8.x86_64                           |
| python3-pip-wheel-9.0.3-18.el8.noarch                       |
| NetworkManager-libnm-1.26.0-8.el8.x86_64                    |
| subscription-manager-rhsm-certificates-1.27.16-1.el8.x86_64 |
| libuser-0.62-23.el8.x86_64                                  |
| redhat-release-8.3-1.0.el8.x86_64                           |
| polkit-0.115-11.el8.x86_64                                  |
| filesystem-3.8-3.el8.x86_64                                 |
| openssh-8.0p1-5.el8.x86_64                                  |
| basesystem-11-5.el8.noarch                                  |
| virt-what-1.18-6.el8.x86_64                                 |
| ncurses-base-6.1-7.20180224.el8.noarch                      |
| libevent-2.1.8-5.el8.x86_64                                 |
| libselinux-2.9-3.el8.x86_64                                 |
| logrotate-3.14.0-4.el8.x86_64                               |
| glibc-langpack-ja-2.28-127.el8.x86_64                       |
| libldb-2.1.3-2.el8.x86_64                                   |
| glibc-2.28-127.el8.x86_64                                   |
| python3-unbound-1.7.3-14.el8.x86_64                         |
| libsepol-2.9-1.el8.x86_64                                   |
| selinux-policy-3.14.3-54.el8.noarch                         |
| xz-libs-5.2.4-3.el8.x86_64                                  |
| timedatex-0.5-3.el8.x86_64                                  |
| popt-1.16-14.el8.x86_64                                     |
| usermode-1.113-1.el8.x86_64                                 |
| libcap-2.26-4.el8.x86_64                                    |
| device-mapper-event-1.02.171-5.el8.x86_64                   |
| libgpg-error-1.31-1.el8.x86_64                              |
| python3-configobj-5.0.6-11.el8.noarch                       |
| libuuid-2.32.1-24.el8.x86_64                                |
| python3-pyudev-0.21.0-7.el8.noarch                          |
| elfutils-libelf-0.180-1.el8.x86_64                          |
| dbxtool-8-5.el8.x86_64                                      |
| expat-2.2.5-4.el8.x86_64                                    |
| dbus-glib-0.110-2.el8.x86_64                                |
| libgcrypt-1.8.5-4.el8.x86_64                                |
| gobject-introspection-1.56.1-1.el8.x86_64                   |
| chkconfig-1.13-2.el8.x86_64                                 |
| libsecret-0.18.6-1.el8.x86_64                               |
| libcap-ng-0.7.9-5.el8.x86_64                                |
| grub2-tools-extra-2.02-90.el8.x86_64                        |
| libffi-3.1-22.el8.x86_64                                    |
| sssd-client-2.3.0-9.el8.x86_64                              |
| libzstd-1.4.4-1.el8.x86_64                                  |
| rpm-plugin-systemd-inhibit-4.14.3-4.el8.x86_64              |
| p11-kit-0.23.14-5.el8_0.x86_64                              |
| mokutil-0.3.0-10.el8.x86_64                                 |
| libunistring-0.9.9-3.el8.x86_64                             |
| dhcp-libs-4.3.6-41.el8.x86_64                               |
| json-c-0.13.1-0.2.el8.x86_64                                |
| dracut-network-049-95.git20200804.el8.x86_64                |
| libtalloc-2.3.1-2.el8.x86_64                                |
| gnupg2-smime-2.2.20-2.el8.x86_64                            |
| libassuan-2.5.1-3.el8.x86_64                                |
| gpgme-1.13.1-3.el8.x86_64                                   |
| grub2-common-2.02-90.el8.noarch                             |
| libdnf-0.48.0-5.el8.x86_64                                  |
| jansson-2.11-3.el8.x86_64                                   |
| python3-hawkey-0.48.0-5.el8.x86_64                          |
| libacl-2.2.53-1.el8.x86_64                                  |
| python3-gpg-1.13.1-3.el8.x86_64                             |
| libsmartcols-2.32.1-24.el8.x86_64                           |
| python3-rpm-4.14.3-4.el8.x86_64                             |
| pcre-8.42-4.el8.x86_64                                      |
| plymouth-core-libs-0.9.4-7.20200615git1e36e30.el8.x86_64    |
| libtevent-0.10.2-2.el8.x86_64                               |
| plymouth-0.9.4-7.20200615git1e36e30.el8.x86_64              |
| libxslt-1.1.32-5.el8.x86_64                                 |
| libnfsidmap-2.3.3-35.el8.x86_64                             |
| keyutils-libs-1.5.10-6.el8.x86_64                           |
| sssd-common-2.3.0-9.el8.x86_64                              |
| libbasicobjects-0.1.1-39.el8.x86_64                         |
| python3-ethtool-0.14-3.el8.x86_64                           |
| libref_array-0.1.5-39.el8.x86_64                            |
| python3-libcomps-0.1.11-4.el8.x86_64                        |
| libtool-ltdl-2.4.6-25.el8.x86_64                            |
| dnf-4.2.23-4.el8.noarch                                     |
| xmlsec1-1.2.25-4.el8.x86_64                                 |
| dnf-plugin-subscription-manager-1.27.16-1.el8.x86_64        |
| libnl3-cli-3.5.0-1.el8.x86_64                               |
| python3-slip-0.6.4-11.el8.noarch                            |
| nettle-3.4.1-2.el8.x86_64                                   |
| python3-libxml2-2.9.7-8.el8.x86_64                          |
| libgomp-8.3.1-5.1.el8.x86_64                                |
| python3-nftables-0.9.3-16.el8.x86_64                        |
| cpio-2.12-8.el8.x86_64                                      |
| python3-perf-4.18.0-240.el8.x86_64                          |
| fuse-libs-2.9.7-12.el8.x86_64                               |
| tuned-2.14.0-3.el8.noarch                                   |
| libedit-3.1-23.20170329cvs.el8.x86_64                       |
| subscription-manager-1.27.16-1.el8.x86_64                   |
| libpcap-1.9.1-4.el8.x86_64                                  |
| yum-4.2.23-4.el8.noarch                                     |
| libseccomp-2.4.3-1.el8.x86_64                               |
| NetworkManager-team-1.26.0-8.el8.x86_64                     |
| libtasn1-4.13-3.el8.x86_64                                  |
| open-vm-tools-11.1.0-2.el8.x86_64                           |
| lzo-2.08-14.el8.x86_64                                      |
| grub2-efi-x64-2.02-90.el8.x86_64                            |
| squashfs-tools-4.3-19.el8.x86_64                            |
| authselect-1.2.1-2.el8.x86_64                               |
| libnetfilter_conntrack-1.0.6-5.el8.x86_64                   |
| kernel-4.18.0-240.el8.x86_64                                |
| iptables-ebtables-1.8.4-15.el8.x86_64                       |
| rsyslog-8.1911.0-6.el8.x86_64                               |
| device-mapper-persistent-data-0.8.5-4.el8.x86_64            |
| openssh-server-8.0p1-5.el8.x86_64                           |
| xz-5.2.4-3.el8.x86_64                                       |
| microcode_ctl-20200609-2.el8.x86_64                         |
| acl-2.2.53-1.el8.x86_64                                     |
| irqbalance-1.4.0-4.el8.x86_64                               |
| vim-minimal-8.0.1763-15.el8.x86_64                          |
| sudo-1.8.29-6.el8.x86_64                                    |
| libpsl-0.20.2-6.el8.x86_64                                  |
| xfsprogs-5.0.0-4.el8.x86_64                                 |
| ipset-7.1-1.el8.x86_64                                      |
| prefixdevname-0.1.0-6.el8.x86_64                            |
| mozjs60-60.9.0-4.el8.x86_64                                 |
| sg3_utils-1.44-5.el8.x86_64                                 |
| libcomps-0.1.11-4.el8.x86_64                                |
| efibootmgr-16-1.el8.x86_64                                  |
| coreutils-common-8.30-8.el8.x86_64                          |
| iprutils-2.4.19-1.el8.x86_64                                |
| libss-1.45.6-1.el8.x86_64                                   |
| freetype-2.9.1-4.el8.x86_64                                 |
| libselinux-utils-2.9-3.el8.x86_64                           |
| less-530-1.el8.x86_64                                       |
| c-ares-1.13.0-5.el8.x86_64                                  |
| hardlink-1.3-6.el8.x86_64                                   |
| libdaemon-0.14-15.el8.x86_64                                |
| libnghttp2-1.33.0-3.el8_2.1.x86_64                          |
| libini_config-1.3.1-39.el8.x86_64                           |
| libdrm-2.4.101-1.el8.x86_64                                 |
| libsigsegv-2.11-5.el8.x86_64                                |
| libsss_autofs-2.3.0-9.el8.x86_64                            |
| libsss_sudo-2.3.0-9.el8.x86_64                              |
| libverto-0.3.0-5.el8.x86_64                                 |
| memstrack-0.1.11-1.el8.x86_64                               |
| npth-1.5-4.el8.x86_64                                       |
| slang-2.3.2-3.el8.x86_64                                    |
| libestr-0.1.10-1.el8.x86_64                                 |
| libmaxminddb-1.2.0-10.el8.x86_64                            |
| libmspack-0.7-0.3.alpha.el8.4.x86_64                        |
| linux-firmware-20200619-99.git3890db36.el8.noarch           |
| libreport-filesystem-2.9.5-15.el8.x86_64                    |
| kbd-misc-2.0.4-10.el8.noarch                                |
| fuse-common-3.2.1-12.el8.x86_64                             |
| firewalld-filesystem-0.8.2-2.el8.noarch                     |
| dbus-common-1.12.8-11.el8.noarch                            |
| platform-python-pip-9.0.3-18.el8.noarch                     |
| python3-libs-3.6.8-31.el8.x86_64                            |
| libssh-0.9.4-2.el8.x86_64                                   |
| platform-python-3.6.8-31.el8.x86_64                         |
| libkcapi-1.2.0-2.el8.x86_64                                 |
| libarchive-3.3.2-9.el8.x86_64                               |
| curl-7.61.1-14.el8.x86_64                                   |
| openssl-1.1.1g-11.el8.x86_64                                |
| crypto-policies-20200713-1.git51d1222.el8.noarch            |
| gzip-1.9-9.el8.x86_64                                       |
| cracklib-dicts-2.9.6-15.el8.x86_64                          |
| krb5-libs-1.18.2-5.el8.x86_64                               |
| libnsl2-1.2.0-2.20180605git4a062cf.el8.x86_64               |
| device-mapper-1.02.171-5.el8.x86_64                         |
| elfutils-libs-0.180-1.el8.x86_64                            |
| rpm-4.14.3-4.el8.x86_64                                     |
| libcroco-0.6.12-4.el8_2.1.x86_64                            |
| libmount-2.32.1-24.el8.x86_64                               |
| dbus-tools-1.12.8-11.el8.x86_64                             |
| systemd-libs-239-40.el8.x86_64                              |
| device-mapper-libs-1.02.171-5.el8.x86_64                    |
| ca-certificates-2020.2.41-80.0.el8_2.noarch                 |
| libdb-5.3.28-39.el8.x86_64                                  |
| kmod-25-16.el8.x86_64                                       |
| cryptsetup-libs-2.3.3-2.el8.x86_64                          |
| dbus-daemon-1.12.8-11.el8.x86_64                            |
| kbd-2.0.4-10.el8.x86_64                                     |
| pam-1.3.1-11.el8.x86_64                                     |
| systemd-pam-239-40.el8.x86_64                               |
| os-prober-1.74-6.el8.x86_64                                 |
| grub2-tools-2.02-90.el8.x86_64                              |
| shared-mime-info-1.9-3.el8.x86_64                           |
| dbus-1.12.8-11.el8.x86_64                                   |
| systemd-udev-239-40.el8.x86_64                              |
| python3-six-1.11.0-8.el8.noarch                             |
| libmodulemd-2.9.4-2.el8.x86_64                              |
| librhsm-0.0.3-3.el8.x86_64                                  |
| libsolv-0.7.11-1.el8.x86_64                                 |
| dosfstools-4.1-6.el8.x86_64                                 |
| langpacks-ja-1.0-12.el8.noarch                              |
| iwl7260-firmware-25.30.13.0-99.el8.1.noarch                 |
| iwl6000g2a-firmware-18.168.6.1-99.el8.1.noarch              |
| iwl5150-firmware-8.24.2.2-99.el8.1.noarch                   |
| iwl3160-firmware-25.30.13.0-99.el8.1.noarch                 |
| iwl2000-firmware-18.168.6.1-99.el8.1.noarch                 |
| iwl105-firmware-18.168.6.1-99.el8.1.noarch                  |
| iwl100-firmware-39.31.5.1-99.el8.1.noarch                   |
| device-mapper-event-libs-1.02.171-5.el8.x86_64              |
| hwdata-0.314-8.6.el8.noarch                                 |
| cronie-1.5.2-4.el8.x86_64                                   |
| python3-setuptools-wheel-39.2.0-6.el8.noarch                |
| NetworkManager-1.26.0-8.el8.x86_64                          |
| redhat-release-eula-8.3-1.0.el8.x86_64                      |
| polkit-pkla-compat-0.1-12.el8.x86_64                        |
| efi-filesystem-3-2.el8.noarch                               |
| ima-evm-utils-1.1-5.el8.x86_64                              |
| pcre2-10.32-2.el8.x86_64                                    |
| python3-syspurpose-1.27.16-1.el8.x86_64                     |
| glibc-common-2.28-127.el8.x86_64                            |
| rpm-plugin-selinux-4.14.3-4.el8.x86_64                      |
| zlib-1.2.11-16.el8_2.x86_64                                 |
| passwd-0.80-3.el8.x86_64                                    |
| bzip2-libs-1.0.6-26.el8.x86_64                              |
| lvm2-libs-2.03.09-5.el8.x86_64                              |
| info-6.5-6.el8.x86_64                                       |
| authselect-libs-1.2.1-2.el8.x86_64                          |
| readline-7.0-10.el8.x86_64                                  |
| python3-dbus-1.2.4-15.el8.x86_64                            |
| sqlite-libs-3.26.0-11.el8.x86_64                            |
| pinentry-1.1.0-2.el8.x86_64                                 |
| audit-libs-3.0-0.17.20191104git1c2f876.el8.x86_64           |
| pciutils-3.6.4-2.el8.x86_64                                 |
| lua-libs-5.3.4-11.el8.x86_64                                |
| xmlsec1-openssl-1.2.25-4.el8.x86_64                         |
| libidn2-2.2.0-1.el8.x86_64                                  |
| libusbx-1.0.23-4.el8.x86_64                                 |
| which-2.21-12.el8.x86_64                                    |
| librepo-1.12.0-2.el8.x86_64                                 |
| efivar-libs-37-4.el8.x86_64                                 |
| python3-librepo-1.12.0-2.el8.x86_64                         |
| sed-4.5-2.el8.x86_64                                        |
| python3-subscription-manager-rhsm-1.27.16-1.el8.x86_64      |
| grep-3.1-6.el8.x86_64                                       |
| teamd-1.31-2.el8.x86_64                                     |
| gdbm-libs-1.18-1.el8.x86_64                                 |
| kernel-tools-4.18.0-240.el8.x86_64                          |
| libcollection-0.7.0-39.el8.x86_64                           |
| python3-dnf-4.2.23-4.el8.noarch                             |
| pciutils-libs-3.6.4-2.el8.x86_64                            |
| python3-libselinux-2.9-3.el8.x86_64                         |
| libnftnl-1.1.5-4.el8.x86_64                                 |
| python3-dmidecode-3.12.2-15.el8.x86_64                      |
| libksba-1.3.5-7.el8.x86_64                                  |
| python3-schedutils-0.6-6.el8.x86_64                         |
| libdhash-0.5.0-39.el8.x86_64                                |
| dnf-plugins-core-4.0.17-5.el8.noarch                        |
| iptables-libs-1.8.4-15.el8.x86_64                           |
| kexec-tools-2.0.20-34.el8.x86_64                            |
| p11-kit-trust-0.23.14-5.el8_0.x86_64                        |
| audit-3.0-0.17.20191104git1c2f876.el8.x86_64                |
| nftables-0.9.3-16.el8.x86_64                                |
| chrony-3.5-1.el8.x86_64                                     |
| libteam-1.31-2.el8.x86_64                                   |
| NetworkManager-tui-1.26.0-8.el8.x86_64                      |
| groff-base-1.22.3-18.el8.x86_64                             |
| dracut-config-rescue-049-95.git20200804.el8.x86_64          |
| efivar-37-4.el8.x86_64                                      |
| e2fsprogs-1.45.6-1.el8.x86_64                               |
| mpfr-3.1.6-1.el8.x86_64                                     |
| biosdevname-0.7.3-2.el8.x86_64                              |
| libmetalink-0.1.3-7.el8.x86_64                              |
| hostname-3.20-6.el8.x86_64                                  |
| libpng-1.6.34-5.el8.x86_64                                  |
| rootfiles-8.1-22.el8.noarch                                 |
| kernel-tools-libs-4.18.0-240.el8.x86_64                     |
| iwl6000-firmware-9.221.4.1-99.el8.1.noarch                  |
| dmidecode-3.2-6.el8.x86_64                                  |
| iwl2030-firmware-18.168.6.1-99.el8.1.noarch                 |
| libndp-1.7-3.el8.x86_64                                     |
| iwl1000-firmware-39.31.5.1-99.el8.1.noarch                  |
| libpciaccess-0.14-1.el8.x86_64                              |
| gawk-4.2.1-1.el8.x86_64                                     |
| libsysfs-2.1.0-24.el8.x86_64                                |
| ncurses-6.1-7.20180224.el8.x86_64                           |
| newt-0.52.20-11.el8.x86_64                                  |
| ipcalc-0.2.4-4.el8.x86_64                                   |
| libssh-config-0.9.4-2.el8.noarch                            |
| kbd-legacy-2.0.4-10.el8.noarch                              |
| dhcp-common-4.3.6-41.el8.noarch                             |
| platform-python-setuptools-39.2.0-6.el8.noarch              |
| openldap-2.4.46-15.el8.x86_64                               |
| libkcapi-hmaccalc-1.2.0-2.el8.x86_64                        |
| libcurl-7.61.1-14.el8.x86_64                                |
| elfutils-default-yama-scope-0.180-1.el8.noarch              |
| procps-ng-3.3.15-3.el8.x86_64                               |
| kpartx-0.8.4-5.el8.x86_64                                   |
| openssl-pkcs11-0.4.10-2.el8.x86_64                          |
| libfdisk-2.32.1-24.el8.x86_64                               |
| coreutils-8.30-8.el8.x86_64                                 |
| shadow-utils-4.6-11.el8.x86_64                              |
| rpm-libs-4.14.3-4.el8.x86_64                                |
| trousers-lib-0.3.14-4.el8.x86_64                            |
| libpwquality-1.4.0-9.el8.x86_64                             |
| dracut-049-95.git20200804.el8.x86_64                        |
| glib2-2.56.4-8.el8.x86_64                                   |
| systemd-239-40.el8.x86_64                                   |
| json-glib-1.4.4-1.el8.x86_64                                |
| python3-dateutil-2.6.1-6.el8.noarch                         |
