RHEL/8.4/rpm-qa.md
## Red Hat Enterprise Linux release 8.4 「最小限のインストール」後のrpm -qaリスト

Red Hat Enterprise Linux release 8.4 を「ソフトウェアの選択」画面で「最小限のインストール」を選択しインストールした直後の「# rpm -qa」コマンドの結果です。

| パッケージ名                                                      |
| ----------------------------------------------------------- |
| ModemManager-glib-1.10.8-2.el8.x86_64                       |
| NetworkManager-1.30.0-7.el8.x86_64                          |
| NetworkManager-libnm-1.30.0-7.el8.x86_64                    |
| NetworkManager-team-1.30.0-7.el8.x86_64                     |
| NetworkManager-tui-1.30.0-7.el8.x86_64                      |
| acl-2.2.53-1.el8.x86_64                                     |
| audit-3.0-0.17.20191104git1c2f876.el8.x86_64                |
| audit-libs-3.0-0.17.20191104git1c2f876.el8.x86_64           |
| authselect-1.2.2-2.el8.x86_64                               |
| authselect-libs-1.2.2-2.el8.x86_64                          |
| basesystem-11-5.el8.noarch                                  |
| bash-4.4.19-14.el8.x86_64                                   |
| bind-export-libs-9.11.26-3.el8.x86_64                       |
| biosdevname-0.7.3-2.el8.x86_64                              |
| brotli-1.0.6-3.el8.x86_64                                   |
| bubblewrap-0.4.0-1.el8.x86_64                               |
| bzip2-libs-1.0.6-26.el8.x86_64                              |
| c-ares-1.13.0-5.el8.x86_64                                  |
| ca-certificates-2020.2.41-80.0.el8_2.noarch                 |
| chkconfig-1.13-2.el8.x86_64                                 |
| chrony-3.5-2.el8.x86_64                                     |
| coreutils-8.30-8.el8.x86_64                                 |
| coreutils-common-8.30-8.el8.x86_64                          |
| cpio-2.12-10.el8.x86_64                                     |
| cracklib-2.9.6-15.el8.x86_64                                |
| cracklib-dicts-2.9.6-15.el8.x86_64                          |
| cronie-1.5.2-4.el8.x86_64                                   |
| cronie-anacron-1.5.2-4.el8.x86_64                           |
| crontabs-1.11-17.20190603git.el8.noarch                     |
| crypto-policies-20210209-1.gitbfb6bed.el8_3.noarch          |
| crypto-policies-scripts-20210209-1.gitbfb6bed.el8_3.noarch  |
| cryptsetup-libs-2.3.3-4.el8.x86_64                          |
| curl-7.61.1-18.el8.x86_64                                   |
| cyrus-sasl-lib-2.1.27-5.el8.x86_64                          |
| dbus-1.12.8-12.el8.x86_64                                   |
| dbus-common-1.12.8-12.el8.noarch                            |
| dbus-daemon-1.12.8-12.el8.x86_64                            |
| dbus-glib-0.110-2.el8.x86_64                                |
| dbus-libs-1.12.8-12.el8.x86_64                              |
| dbus-tools-1.12.8-12.el8.x86_64                             |
| device-mapper-1.02.175-5.el8.x86_64                         |
| device-mapper-event-1.02.175-5.el8.x86_64                   |
| device-mapper-event-libs-1.02.175-5.el8.x86_64              |
| device-mapper-libs-1.02.175-5.el8.x86_64                    |
| device-mapper-persistent-data-0.8.5-4.el8.x86_64            |
| dhcp-client-4.3.6-44.el8.x86_64                             |
| dhcp-common-4.3.6-44.el8.noarch                             |
| dhcp-libs-4.3.6-44.el8.x86_64                               |
| diffutils-3.6-6.el8.x86_64                                  |
| dmidecode-3.2-8.el8.x86_64                                  |
| dnf-4.4.2-11.el8.noarch                                     |
| dnf-data-4.4.2-11.el8.noarch                                |
| dnf-plugin-subscription-manager-1.28.13-2.el8.x86_64        |
| dnf-plugins-core-4.0.18-4.el8.noarch                        |
| dosfstools-4.1-6.el8.x86_64                                 |
| dracut-049-135.git20210121.el8.x86_64                       |
| dracut-config-rescue-049-135.git20210121.el8.x86_64         |
| dracut-network-049-135.git20210121.el8.x86_64               |
| dracut-squash-049-135.git20210121.el8.x86_64                |
| e2fsprogs-1.45.6-1.el8.x86_64                               |
| e2fsprogs-libs-1.45.6-1.el8.x86_64                          |
| efi-filesystem-3-3.el8.noarch                               |
| efibootmgr-16-1.el8.x86_64                                  |
| efivar-libs-37-4.el8.x86_64                                 |
| elfutils-debuginfod-client-0.182-3.el8.x86_64               |
| elfutils-default-yama-scope-0.182-3.el8.noarch              |
| elfutils-libelf-0.182-3.el8.x86_64                          |
| elfutils-libs-0.182-3.el8.x86_64                            |
| ethtool-5.8-5.el8.x86_64                                    |
| expat-2.2.5-4.el8.x86_64                                    |
| file-5.33-16.el8_3.1.x86_64                                 |
| file-libs-5.33-16.el8_3.1.x86_64                            |
| filesystem-3.8-3.el8.x86_64                                 |
| findutils-4.6.0-20.el8.x86_64                               |
| firewalld-0.8.2-6.el8.noarch                                |
| firewalld-filesystem-0.8.2-6.el8.noarch                     |
| freetype-2.9.1-4.el8_3.1.x86_64                             |
| fuse-2.9.7-12.el8.x86_64                                    |
| fuse-common-3.2.1-12.el8.x86_64                             |
| fuse-libs-2.9.7-12.el8.x86_64                               |
| fwupd-1.5.5-3.el8.x86_64                                    |
| gawk-4.2.1-2.el8.x86_64                                     |
| gdbm-1.18-1.el8.x86_64                                      |
| gdbm-libs-1.18-1.el8.x86_64                                 |
| gdisk-1.0.3-6.el8.x86_64                                    |
| geolite2-city-20180605-1.el8.noarch                         |
| geolite2-country-20180605-1.el8.noarch                      |
| gettext-0.19.8.1-17.el8.x86_64                              |
| gettext-libs-0.19.8.1-17.el8.x86_64                         |
| glib2-2.56.4-9.el8.x86_64                                   |
| glibc-2.28-151.el8.x86_64                                   |
| glibc-common-2.28-151.el8.x86_64                            |
| glibc-langpack-ja-2.28-151.el8.x86_64                       |
| gmp-6.1.2-10.el8.x86_64                                     |
| gnupg2-2.2.20-2.el8.x86_64                                  |
| gnupg2-smime-2.2.20-2.el8.x86_64                            |
| gnutls-3.6.14-7.el8_3.x86_64                                |
| gobject-introspection-1.56.1-1.el8.x86_64                   |
| gpgme-1.13.1-7.el8.x86_64                                   |
| grep-3.1-6.el8.x86_64                                       |
| groff-base-1.22.3-18.el8.x86_64                             |
| grub2-common-2.02-99.el8.noarch                             |
| grub2-efi-x64-2.02-99.el8.x86_64                            |
| grub2-tools-2.02-99.el8.x86_64                              |
| grub2-tools-extra-2.02-99.el8.x86_64                        |
| grub2-tools-minimal-2.02-99.el8.x86_64                      |
| grubby-8.40-41.el8.x86_64                                   |
| gzip-1.9-12.el8.x86_64                                      |
| hardlink-1.3-6.el8.x86_64                                   |
| hdparm-9.54-3.el8.x86_64                                    |
| hostname-3.20-6.el8.x86_64                                  |
| hwdata-0.314-8.8.el8.noarch                                 |
| ima-evm-utils-1.3.2-12.el8.x86_64                           |
| info-6.5-6.el8.x86_64                                       |
| initscripts-10.00.15-1.el8.x86_64                           |
| ipcalc-0.2.4-4.el8.x86_64                                   |
| iproute-5.9.0-4.el8.x86_64                                  |
| iprutils-2.4.19-1.el8.x86_64                                |
| ipset-7.1-1.el8.x86_64                                      |
| ipset-libs-7.1-1.el8.x86_64                                 |
| iptables-1.8.4-17.el8.x86_64                                |
| iptables-ebtables-1.8.4-17.el8.x86_64                       |
| iptables-libs-1.8.4-17.el8.x86_64                           |
| iputils-20180629-7.el8.x86_64                               |
| irqbalance-1.4.0-6.el8.x86_64                               |
| iwl100-firmware-39.31.5.1-102.el8.1.noarch                  |
| iwl1000-firmware-39.31.5.1-102.el8.1.noarch                 |
| iwl105-firmware-18.168.6.1-102.el8.1.noarch                 |
| iwl135-firmware-18.168.6.1-102.el8.1.noarch                 |
| iwl2000-firmware-18.168.6.1-102.el8.1.noarch                |
| iwl2030-firmware-18.168.6.1-102.el8.1.noarch                |
| iwl3160-firmware-25.30.13.0-102.el8.1.noarch                |
| iwl5000-firmware-8.83.5.1_1-102.el8.1.noarch                |
| iwl5150-firmware-8.24.2.2-102.el8.1.noarch                  |
| iwl6000-firmware-9.221.4.1-102.el8.1.noarch                 |
| iwl6000g2a-firmware-18.168.6.1-102.el8.1.noarch             |
| iwl6050-firmware-41.28.5.1-102.el8.1.noarch                 |
| iwl7260-firmware-25.30.13.0-102.el8.1.noarch                |
| jansson-2.11-3.el8.x86_64                                   |
| json-c-0.13.1-0.4.el8.x86_64                                |
| json-glib-1.4.4-1.el8.x86_64                                |
| kbd-2.0.4-10.el8.x86_64                                     |
| kbd-legacy-2.0.4-10.el8.noarch                              |
| kbd-misc-2.0.4-10.el8.noarch                                |
| kernel-4.18.0-305.el8.x86_64                                |
| kernel-core-4.18.0-305.el8.x86_64                           |
| kernel-modules-4.18.0-305.el8.x86_64                        |
| kernel-tools-4.18.0-305.el8.x86_64                          |
| kernel-tools-libs-4.18.0-305.el8.x86_64                     |
| kexec-tools-2.0.20-46.el8.x86_64                            |
| keyutils-libs-1.5.10-6.el8.x86_64                           |
| kmod-25-17.el8.x86_64                                       |
| kmod-libs-25-17.el8.x86_64                                  |
| kpartx-0.8.4-10.el8.x86_64                                  |
| krb5-libs-1.18.2-8.el8.x86_64                               |
| langpacks-ja-1.0-12.el8.noarch                              |
| less-530-1.el8.x86_64                                       |
| libacl-2.2.53-1.el8.x86_64                                  |
| libaio-0.3.112-1.el8.x86_64                                 |
| libarchive-3.3.3-1.el8.x86_64                               |
| libassuan-2.5.1-3.el8.x86_64                                |
| libatasmart-0.19-14.el8.x86_64                              |
| libattr-2.4.48-3.el8.x86_64                                 |
| libbasicobjects-0.1.1-39.el8.x86_64                         |
| libblkid-2.32.1-27.el8.x86_64                               |
| libblockdev-2.24-5.el8.x86_64                               |
| libblockdev-crypto-2.24-5.el8.x86_64                        |
| libblockdev-fs-2.24-5.el8.x86_64                            |
| libblockdev-loop-2.24-5.el8.x86_64                          |
| libblockdev-mdraid-2.24-5.el8.x86_64                        |
| libblockdev-part-2.24-5.el8.x86_64                          |
| libblockdev-swap-2.24-5.el8.x86_64                          |
| libblockdev-utils-2.24-5.el8.x86_64                         |
| libbytesize-1.4-3.el8.x86_64                                |
| libcap-2.26-4.el8.x86_64                                    |
| libcap-ng-0.7.9-5.el8.x86_64                                |
| libcollection-0.7.0-39.el8.x86_64                           |
| libcom_err-1.45.6-1.el8.x86_64                              |
| libcomps-0.1.11-5.el8.x86_64                                |
| libcroco-0.6.12-4.el8_2.1.x86_64                            |
| libcurl-7.61.1-18.el8.x86_64                                |
| libdaemon-0.14-15.el8.x86_64                                |
| libdb-5.3.28-40.el8.x86_64                                  |
| libdb-utils-5.3.28-40.el8.x86_64                            |
| libdhash-0.5.0-39.el8.x86_64                                |
| libdnf-0.55.0-7.el8.x86_64                                  |
| libdrm-2.4.103-1.el8.x86_64                                 |
| libedit-3.1-23.20170329cvs.el8.x86_64                       |
| libestr-0.1.10-1.el8.x86_64                                 |
| libevent-2.1.8-5.el8.x86_64                                 |
| libfastjson-0.99.8-2.el8.x86_64                             |
| libfdisk-2.32.1-27.el8.x86_64                               |
| libffi-3.1-22.el8.x86_64                                    |
| libgcab1-1.1-1.el8.x86_64                                   |
| libgcc-8.4.1-1.el8.x86_64                                   |
| libgcrypt-1.8.5-4.el8.x86_64                                |
| libgomp-8.4.1-1.el8.x86_64                                  |
| libgpg-error-1.31-1.el8.x86_64                              |
| libgudev-232-4.el8.x86_64                                   |
| libgusb-0.3.0-1.el8.x86_64                                  |
| libibverbs-32.0-4.el8.x86_64                                |
| libidn2-2.2.0-1.el8.x86_64                                  |
| libini_config-1.3.1-39.el8.x86_64                           |
| libkcapi-1.2.0-2.el8.x86_64                                 |
| libkcapi-hmaccalc-1.2.0-2.el8.x86_64                        |
| libksba-1.3.5-7.el8.x86_64                                  |
| libldb-2.2.0-2.el8.x86_64                                   |
| libmaxminddb-1.2.0-10.el8.x86_64                            |
| libmbim-1.20.2-1.el8.x86_64                                 |
| libmetalink-0.1.3-7.el8.x86_64                              |
| libmnl-1.0.4-6.el8.x86_64                                   |
| libmodulemd-2.9.4-2.el8.x86_64                              |
| libmount-2.32.1-27.el8.x86_64                               |
| libmspack-0.7-0.3.alpha.el8.4.x86_64                        |
| libndp-1.7-5.el8.x86_64                                     |
| libnetfilter_conntrack-1.0.6-5.el8.x86_64                   |
| libnfnetlink-1.0.1-13.el8.x86_64                            |
| libnfsidmap-2.3.3-41.el8.x86_64                             |
| libnftnl-1.1.5-4.el8.x86_64                                 |
| libnghttp2-1.33.0-3.el8_2.1.x86_64                          |
| libnl3-3.5.0-1.el8.x86_64                                   |
| libnl3-cli-3.5.0-1.el8.x86_64                               |
| libnsl2-1.2.0-2.20180605git4a062cf.el8.x86_64               |
| libpath_utils-0.2.1-39.el8.x86_64                           |
| libpcap-1.9.1-5.el8.x86_64                                  |
| libpciaccess-0.14-1.el8.x86_64                              |
| libpipeline-1.5.0-2.el8.x86_64                              |
| libpkgconf-1.4.2-1.el8.x86_64                               |
| libpng-1.6.34-5.el8.x86_64                                  |
| libpsl-0.20.2-6.el8.x86_64                                  |
| libpwquality-1.4.4-3.el8.x86_64                             |
| libqmi-1.24.0-1.el8.x86_64                                  |
| libref_array-0.1.5-39.el8.x86_64                            |
| librepo-1.12.0-3.el8.x86_64                                 |
| libreport-filesystem-2.9.5-15.el8.x86_64                    |
| librhsm-0.0.3-4.el8.x86_64                                  |
| libseccomp-2.5.1-1.el8.x86_64                               |
| libsecret-0.18.6-1.el8.x86_64                               |
| libselinux-2.9-5.el8.x86_64                                 |
| libselinux-utils-2.9-5.el8.x86_64                           |
| libsemanage-2.9-6.el8.x86_64                                |
| libsepol-2.9-2.el8.x86_64                                   |
| libsigsegv-2.11-5.el8.x86_64                                |
| libsmartcols-2.32.1-27.el8.x86_64                           |
| libsmbios-2.4.1-2.el8.x86_64                                |
| libsolv-0.7.16-2.el8.x86_64                                 |
| libss-1.45.6-1.el8.x86_64                                   |
| libssh-0.9.4-2.el8.x86_64                                   |
| libssh-config-0.9.4-2.el8.noarch                            |
| libsss_autofs-2.4.0-9.el8.x86_64                            |
| libsss_certmap-2.4.0-9.el8.x86_64                           |
| libsss_idmap-2.4.0-9.el8.x86_64                             |
| libsss_nss_idmap-2.4.0-9.el8.x86_64                         |
| libsss_sudo-2.4.0-9.el8.x86_64                              |
| libstdc++-8.4.1-1.el8.x86_64                                |
| libsysfs-2.1.0-24.el8.x86_64                                |
| libtalloc-2.3.1-2.el8.x86_64                                |
| libtasn1-4.13-3.el8.x86_64                                  |
| libtdb-1.4.3-1.el8.x86_64                                   |
| libteam-1.31-2.el8.x86_64                                   |
| libtevent-0.10.2-2.el8.x86_64                               |
| libtirpc-1.1.4-4.el8.x86_64                                 |
| libtool-ltdl-2.4.6-25.el8.x86_64                            |
| libudisks2-2.9.0-6.el8.x86_64                               |
| libunistring-0.9.9-3.el8.x86_64                             |
| libusbx-1.0.23-4.el8.x86_64                                 |
| libuser-0.62-23.el8.x86_64                                  |
| libutempter-1.1.6-14.el8.x86_64                             |
| libuuid-2.32.1-27.el8.x86_64                                |
| libverto-0.3.0-5.el8.x86_64                                 |
| libxcrypt-4.1.1-4.el8.x86_64                                |
| libxkbcommon-0.9.1-1.el8.x86_64                             |
| libxml2-2.9.7-9.el8.x86_64                                  |
| libxmlb-0.1.15-1.el8.x86_64                                 |
| libxslt-1.1.32-6.el8.x86_64                                 |
| libyaml-0.1.7-5.el8.x86_64                                  |
| libzstd-1.4.4-1.el8.x86_64                                  |
| linux-firmware-20201218-102.git05789708.el8.noarch          |
| lmdb-libs-0.9.24-1.el8.x86_64                               |
| logrotate-3.14.0-4.el8.x86_64                               |
| lshw-B.02.19.2-5.el8.x86_64                                 |
| lsscsi-0.32-2.el8.x86_64                                    |
| lua-libs-5.3.4-11.el8.x86_64                                |
| lvm2-2.03.11-5.el8.x86_64                                   |
| lvm2-libs-2.03.11-5.el8.x86_64                              |
| lz4-libs-1.8.3-2.el8.x86_64                                 |
| lzo-2.08-14.el8.x86_64                                      |
| man-db-2.7.6.1-17.el8.x86_64                                |
| mdadm-4.1-15.el8.x86_64                                     |
| memstrack-0.1.11-1.el8.x86_64                               |
| microcode_ctl-20210216-1.el8.x86_64                         |
| mokutil-0.3.0-11.el8.x86_64                                 |
| mozjs60-60.9.0-4.el8.x86_64                                 |
| mpfr-3.1.6-1.el8.x86_64                                     |
| ncurses-6.1-7.20180224.el8.x86_64                           |
| ncurses-base-6.1-7.20180224.el8.noarch                      |
| ncurses-libs-6.1-7.20180224.el8.x86_64                      |
| nettle-3.4.1-2.el8.x86_64                                   |
| newt-0.52.20-11.el8.x86_64                                  |
| nftables-0.9.3-18.el8.x86_64                                |
| npth-1.5-4.el8.x86_64                                       |
| nspr-4.25.0-2.el8_2.x86_64                                  |
| nss-3.53.1-17.el8_3.x86_64                                  |
| nss-softokn-3.53.1-17.el8_3.x86_64                          |
| nss-softokn-freebl-3.53.1-17.el8_3.x86_64                   |
| nss-sysinit-3.53.1-17.el8_3.x86_64                          |
| nss-util-3.53.1-17.el8_3.x86_64                             |
| numactl-libs-2.0.12-11.el8.x86_64                           |
| open-vm-tools-11.2.0-2.el8.x86_64                           |
| openldap-2.4.46-16.el8.x86_64                               |
| openssh-8.0p1-5.el8.x86_64                                  |
| openssh-clients-8.0p1-5.el8.x86_64                          |
| openssh-server-8.0p1-5.el8.x86_64                           |
| openssl-1.1.1g-15.el8_3.x86_64                              |
| openssl-libs-1.1.1g-15.el8_3.x86_64                         |
| openssl-pkcs11-0.4.10-2.el8.x86_64                          |
| os-prober-1.74-6.el8.x86_64                                 |
| p11-kit-0.23.22-1.el8.x86_64                                |
| p11-kit-trust-0.23.22-1.el8.x86_64                          |
| pam-1.3.1-14.el8.x86_64                                     |
| parted-3.2-38.el8.x86_64                                    |
| passwd-0.80-3.el8.x86_64                                    |
| pciutils-3.7.0-1.el8.x86_64                                 |
| pciutils-libs-3.7.0-1.el8.x86_64                            |
| pcre-8.42-4.el8.x86_64                                      |
| pcre2-10.32-2.el8.x86_64                                    |
| pigz-2.4-4.el8.x86_64                                       |
| pinentry-1.1.0-2.el8.x86_64                                 |
| pkgconf-1.4.2-1.el8.x86_64                                  |
| pkgconf-m4-1.4.2-1.el8.noarch                               |
| pkgconf-pkg-config-1.4.2-1.el8.x86_64                       |
| platform-python-3.6.8-37.el8.x86_64                         |
| platform-python-pip-9.0.3-19.el8.noarch                     |
| platform-python-setuptools-39.2.0-6.el8.noarch              |
| plymouth-0.9.4-9.20200615git1e36e30.el8.x86_64              |
| plymouth-core-libs-0.9.4-9.20200615git1e36e30.el8.x86_64    |
| plymouth-scripts-0.9.4-9.20200615git1e36e30.el8.x86_64      |
| policycoreutils-2.9-14.el8.x86_64                           |
| polkit-0.115-11.el8.x86_64                                  |
| polkit-libs-0.115-11.el8.x86_64                             |
| polkit-pkla-compat-0.1-12.el8.x86_64                        |
| popt-1.18-1.el8.x86_64                                      |
| prefixdevname-0.1.0-6.el8.x86_64                            |
| procps-ng-3.3.15-6.el8.x86_64                               |
| publicsuffix-list-dafsa-20180723-1.el8.noarch               |
| python3-chardet-3.0.4-7.el8.noarch                          |
| python3-configobj-5.0.6-11.el8.noarch                       |
| python3-dateutil-2.6.1-6.el8.noarch                         |
| python3-dbus-1.2.4-15.el8.x86_64                            |
| python3-decorator-4.2.1-2.el8.noarch                        |
| python3-dmidecode-3.12.2-15.el8.x86_64                      |
| python3-dnf-4.4.2-11.el8.noarch                             |
| python3-dnf-plugins-core-4.0.18-4.el8.noarch                |
| python3-ethtool-0.14-3.el8.x86_64                           |
| python3-firewall-0.8.2-6.el8.noarch                         |
| python3-gobject-base-3.28.3-2.el8.x86_64                    |
| python3-gpg-1.13.1-7.el8.x86_64                             |
| python3-hawkey-0.55.0-7.el8.x86_64                          |
| python3-idna-2.5-5.el8.noarch                               |
| python3-iniparse-0.4-31.el8.noarch                          |
| python3-inotify-0.9.6-13.el8.noarch                         |
| python3-libcomps-0.1.11-5.el8.x86_64                        |
| python3-libdnf-0.55.0-7.el8.x86_64                          |
| python3-librepo-1.12.0-3.el8.x86_64                         |
| python3-libs-3.6.8-37.el8.x86_64                            |
| python3-libselinux-2.9-5.el8.x86_64                         |
| python3-libxml2-2.9.7-9.el8.x86_64                          |
| python3-linux-procfs-0.6.3-1.el8.noarch                     |
| python3-nftables-0.9.3-18.el8.x86_64                        |
| python3-perf-4.18.0-305.el8.x86_64                          |
| python3-pip-wheel-9.0.3-19.el8.noarch                       |
| python3-pysocks-1.6.8-3.el8.noarch                          |
| python3-pyudev-0.21.0-7.el8.noarch                          |
| python3-requests-2.20.0-2.1.el8_1.noarch                    |
| python3-rpm-4.14.3-13.el8.x86_64                            |
| python3-schedutils-0.6-6.el8.x86_64                         |
| python3-setuptools-wheel-39.2.0-6.el8.noarch                |
| python3-six-1.11.0-8.el8.noarch                             |
| python3-slip-0.6.4-11.el8.noarch                            |
| python3-slip-dbus-0.6.4-11.el8.noarch                       |
| python3-subscription-manager-rhsm-1.28.13-2.el8.x86_64      |
| python3-syspurpose-1.28.13-2.el8.x86_64                     |
| python3-unbound-1.7.3-15.el8.x86_64                         |
| python3-urllib3-1.24.2-5.el8.noarch                         |
| rdma-core-32.0-4.el8.x86_64                                 |
| readline-7.0-10.el8.x86_64                                  |
| redhat-release-8.4-0.6.el8.x86_64                           |
| redhat-release-eula-8.4-0.6.el8.x86_64                      |
| rhc-0.1.2-2.el8.x86_64                                      |
| rootfiles-8.1-22.el8.noarch                                 |
| rpm-4.14.3-13.el8.x86_64                                    |
| rpm-build-libs-4.14.3-13.el8.x86_64                         |
| rpm-libs-4.14.3-13.el8.x86_64                               |
| rpm-plugin-selinux-4.14.3-13.el8.x86_64                     |
| rpm-plugin-systemd-inhibit-4.14.3-13.el8.x86_64             |
| rsyslog-8.1911.0-7.el8.x86_64                               |
| sed-4.5-2.el8.x86_64                                        |
| selinux-policy-3.14.3-67.el8.noarch                         |
| selinux-policy-targeted-3.14.3-67.el8.noarch                |
| setup-2.12.2-6.el8.noarch                                   |
| sg3_utils-1.44-5.el8.x86_64                                 |
| sg3_utils-libs-1.44-5.el8.x86_64                            |
| shadow-utils-4.6-12.el8.x86_64                              |
| shared-mime-info-1.9-3.el8.x86_64                           |
| shim-x64-15.4-2.el8_1.x86_64                                |
| slang-2.3.2-3.el8.x86_64                                    |
| snappy-1.1.8-3.el8.x86_64                                   |
| sqlite-libs-3.26.0-13.el8.x86_64                            |
| squashfs-tools-4.3-20.el8.x86_64                            |
| sssd-client-2.4.0-9.el8.x86_64                              |
| sssd-common-2.4.0-9.el8.x86_64                              |
| sssd-kcm-2.4.0-9.el8.x86_64                                 |
| sssd-nfs-idmap-2.4.0-9.el8.x86_64                           |
| subscription-manager-1.28.13-2.el8.x86_64                   |
| subscription-manager-rhsm-certificates-1.28.13-2.el8.x86_64 |
| sudo-1.8.29-7.el8.x86_64                                    |
| systemd-239-45.el8.x86_64                                   |
| systemd-libs-239-45.el8.x86_64                              |
| systemd-pam-239-45.el8.x86_64                               |
| systemd-udev-239-45.el8.x86_64                              |
| tar-1.30-5.el8.x86_64                                       |
| teamd-1.31-2.el8.x86_64                                     |
| timedatex-0.5-3.el8.x86_64                                  |
| tpm2-tss-2.3.2-3.el8.x86_64                                 |
| trousers-0.3.15-1.el8.x86_64                                |
| trousers-lib-0.3.15-1.el8.x86_64                            |
| tuned-2.15.0-2.el8.noarch                                   |
| tzdata-2021a-1.el8.noarch                                   |
| udisks2-2.9.0-6.el8.x86_64                                  |
| unbound-libs-1.7.3-15.el8.x86_64                            |
| usermode-1.113-1.el8.x86_64                                 |
| util-linux-2.32.1-27.el8.x86_64                             |
| vim-minimal-8.0.1763-15.el8.x86_64                          |
| virt-what-1.18-6.el8.x86_64                                 |
| volume_key-libs-0.3.11-5.el8.x86_64                         |
| which-2.21-12.el8.x86_64                                    |
| xfsprogs-5.0.0-8.el8.x86_64                                 |
| xkeyboard-config-2.28-1.el8.noarch                          |
| xmlsec1-1.2.25-4.el8.x86_64                                 |
| xmlsec1-openssl-1.2.25-4.el8.x86_64                         |
| xz-5.2.4-3.el8.x86_64                                       |
| xz-libs-5.2.4-3.el8.x86_64                                  |
| yum-4.4.2-11.el8.noarch                                     |
| zlib-1.2.11-17.el8.x86_64                                   |
